--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e7eff">  <td>23/04/30 12:06:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:cucumber.Options.testNGRunner@17f9d882]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@76659128</td>   <td></td> </tr>
-<tr bgcolor="6e7eff">  <td>23/04/30 12:06:22</td>   <td>5136</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumber.Options.testNGRunner@17f9d882]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@76659128</td>   <td></td> </tr>
-<tr bgcolor="6e7eff">  <td>23/04/30 12:06:21</td>   <td>3922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@17f9d882]">runScenario</td> 
-  <td>main@76659128</td>   <td></td> </tr>
-<tr bgcolor="6e7eff">  <td>23/04/30 12:06:21</td>   <td>3922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@17f9d882]">runScenario</td> 
-  <td>main@76659128</td>   <td></td> </tr>
-<tr bgcolor="6e7eff">  <td>23/04/30 12:06:21</td>   <td>3922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@17f9d882]">runScenario</td> 
-  <td>main@76659128</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>23/05/02 17:16:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@7f485fda]">runScenario</td> 
+  <td>main@1795816257</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>23/05/02 17:15:57</td>   <td>-4848</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:cucumber.Options.testNGRunner@7f485fda]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1795816257</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>23/05/02 17:16:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@7f485fda]">runScenario</td> 
+  <td>main@1795816257</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>23/05/02 17:16:04</td>   <td>1821</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumber.Options.testNGRunner@7f485fda]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1795816257</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>23/05/02 17:16:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.Options.testNGRunner@7f485fda]">runScenario</td> 
+  <td>main@1795816257</td>   <td></td> </tr>
 </table>
